<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_blue_dark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1"
    app:layout_collapseParallaxMultiplier="1.0">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:background="@drawable/bulls"
        android:contentDescription="@string/bulletin_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/bulletin"
        android:textAppearance="@style/CodeFont"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="0dp"

        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:text="@string/short_stories"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />

</LinearLayout>
